--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -783,9 +783,19 @@ blockquote cite {
     content: none;
 }
 
+.flow-img-container {
+    text-align: center;
+    border-radius: 0.25em;
+    padding: 2rem;
+    margin: -3rem -3.5rem 2rem;
+    background: var(--primary);
+    border-radius: 9px 9px 0 0;
+}
+
 .flow-img {
-    max-width: 260px;
-    margin: 0 auto 2rem;
+    max-width: 320px;
+    margin: 0 auto;
+    box-shadow: 0 10px 40px rgba(50, 16, 76, 0.3);
 }
 
 @media (min-width: 800px) {
@@ -863,9 +873,4 @@ blockquote cite {
     height: auto;
     width: 100%;
     padding-bottom: 2rem;
-}
-
-/* Quote block */
-
-.quoteblock {
 }
