--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -874,3 +874,34 @@ blockquote cite {
     width: 100%;
     padding-bottom: 2rem;
 }
+
+/* Quote group */
+
+.quote-group {
+    display: grid;
+    grid-gap: 1rem;
+}
+
+.quote-group p {
+    background-color: #F2F2F2;
+    background-image: url("data:image/svg+xml,%0A%3Csvg height='100%25' viewBox='0 0 975.036 975.036' width='100%25' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23ccc' d='m925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50z'/%3E%3Cpath fill='%23ccc' d='m106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2s30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z'/%3E%3C/svg%3E");
+    background-size: 1rem;
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    padding: 1rem 3rem 1rem 1rem;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    border-radius: 3px;
+    line-height: 1.4;
+}
+
+@media screen and (min-width: 48em) {
+    .quote-group {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .quote-group > :nth-child(even) {
+        transform: translateY(3rem);
+    }
+}
