--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,13 +242,6 @@ cite {
   font-weight: bold;
   color: var(--text);
   text-decoration: none;
-  background-image: linear-gradient(
-    transparent 80%,
-    var(--highlight) 80%,
-    var(--highlight) 110%,
-    transparent 110%
-  );
-  background-size: 100% 100%;
 }
 
 code {
@@ -504,11 +497,10 @@ video:focus {
 @media (min-width: 1000px) {
   .hero {
     margin-top: 4rem;
-    margin-bottom: 4rem;
+    margin-bottom: 8rem;
     display: grid;
-    max-width: 800px;
-    /* grid-gap: 4rem; */
-    /* grid-template-columns: 1fr 1.3fr; */
+    grid-gap: 4rem;
+    grid-template-columns: 1fr 1.3fr;
   }
 
   .hero--content {
@@ -564,8 +556,19 @@ blockquote:active:after {
 blockquote cite {
   display: inline-block;
   font-size: 0.75em;
-  line-height: 1.8em;
-  margin-top: 1em;
+  line-height: 1.4em;
+}
+
+.quote-cite-image {
+  display: flex;
+  align-items: center;
+}
+
+.quote-cite-image img {
+  width: 100px;
+  border-radius: 100%;
+  filter: saturate(0);
+  margin-right: 1.25rem;
 }
 
 /* team */
