--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,11 +107,20 @@ h5 {
   font-size: calc(14px + (22.28 - 14) * var(--body-lock));
 }
 
+h2,
+h3,
+h4,
 p:not(.lead) {
   max-width: 900px;
 }
 
-p.lead q {
+@media (min-width: 1100px) {
+  p.lead {
+    padding-right: 20%;
+  }
+}
+
+p.lead p.lead q {
   font-weight: bold;
 }
 
